test/parser/should_succeed/statements3.souc
main() = do
	x <- 41
	subroutin x

	print x

subroutin(i) = do
	print i
end
