test/parser/should_fail/bindings.souc
main() = do
	print "are these bindings ok?"

x = 3
x = 4
